--- a/Info.plist
+++ b/Info.plist
@@ -52,6 +52,8 @@
 		<string>&lt;h1&gt;Quicksilver Networking Plug-in&lt;/h1&gt;</string>
 		<key>icon</key>
 		<string>GenericNetworkIcon</string>
+		<key>recommended</key>
+		<true/>
 	</dict>
 	<key>QSPresetAdditionsTemplate</key>
 	<array>
