--- a/Info.plist
+++ b/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>QSActions</key>
 	<dict>
 		<key>QSAirPortDisassociate</key>
@@ -111,6 +111,23 @@
 			<key>validatesObjects</key>
 			<true/>
 		</dict>
+		<key>QSNetworkLocationSelectAction</key>
+		<dict>
+			<key>actionClass</key>
+			<string>QSNetworkLocationActionProvider</string>
+			<key>actionSelector</key>
+			<string>selectNetwork:</string>
+			<key>directTypes</key>
+			<array>
+				<string>qs.networklocation</string>
+			</array>
+			<key>icon</key>
+			<string>GenericNetworkIcon</string>
+			<key>name</key>
+			<string>Switch to Location</string>
+			<key>precedence</key>
+			<integer>2</integer>
+		</dict>
 	</dict>
 	<key>QSPlugIn</key>
 	<dict>
@@ -148,6 +165,18 @@
 					<key>source</key>
 					<string>QSAirPortNetworkObjectSource</string>
 				</dict>
+				<dict>
+					<key>ID</key>
+					<string>QSPresetNetworkLocations</string>
+					<key>enabled</key>
+					<false/>
+					<key>icon</key>
+					<string>GenericNetworkIcon</string>
+					<key>name</key>
+					<string>Network Locations</string>
+					<key>source</key>
+					<string>QSNetworkLocationObjectSource</string>
+				</dict>
 			</array>
 			<key>icon</key>
 			<string>GenericNetworkIcon</string>
@@ -163,6 +192,8 @@
 		<dict>
 			<key>QSAirPortNetworkActionProvider</key>
 			<string>QSAirPortNetworkActionProvider</string>
+			<key>QSNetworkLocationActionProvider</key>
+			<string>QSNetworkLocationActionProvider</string>
 			<key>QSNetworkingActionProvider</key>
 			<string>QSNetworkingActionProvider</string>
 		</dict>
@@ -227,11 +258,15 @@
 			<string>QSAirPortNetworkObjectSource</string>
 			<key>QSNetworkingType</key>
 			<string>QSNetworkingSource</string>
+			<key>qs.networklocation</key>
+			<string>QSNetworkLocationObjectSource</string>
 		</dict>
 		<key>QSObjectSources</key>
 		<dict>
 			<key>QSAirPortNetworkObjectSource</key>
 			<string>QSAirPortNetworkObjectSource</string>
+			<key>QSNetworkLocationObjectSource</key>
+			<string>QSNetworkLocationObjectSource</string>
 			<key>QSNetworkingSource</key>
 			<string>QSNetworkingSource</string>
 		</dict>
