set action names during validation instead of init
They would expire after a while if set in `init`. Also providing some
generic defaults in the plist so they'll look reasonable in the action
prefs even if validation has never occurred.

--- a/Info.plist
+++ b/Info.plist
@@ -89,6 +89,8 @@
 			</array>
 			<key>icon</key>
 			<string>Power</string>
+			<key>name</key>
+			<string>Power Off Wireless Interface</string>
 			<key>precedence</key>
 			<integer>3</integer>
 			<key>validatesObjects</key>
@@ -106,6 +108,8 @@
 			</array>
 			<key>icon</key>
 			<string>Power</string>
+			<key>name</key>
+			<string>Power On Wireless Interface</string>
 			<key>precedence</key>
 			<integer>3</integer>
 			<key>validatesObjects</key>
