--- a/Info.plist
+++ b/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0</string>
+	<string>1.2.1</string>
 	<key>CFBundleVersion</key>
-	<string>A</string>
+	<string>B</string>
 	<key>QSActions</key>
 	<dict>
 		<key>QSAirPortDisassociate</key>
@@ -402,7 +402,7 @@
 			<string>com.blacktree.Quicksilver.QSNetworkLocationPlugIn</string>
 		</array>
 		<key>version</key>
-		<string>4001</string>
+		<string>4012</string>
 	</dict>
 	<key>QSTriggerAdditionsTemplate</key>
 	<array>
