--- a/Info.plist
+++ b/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.0</string>
+	<string>1.3.1</string>
 	<key>CFBundleVersion</key>
-	<string>C</string>
+	<string>D</string>
 	<key>QSActions</key>
 	<dict>
 		<key>QSAirPortDisassociate</key>
@@ -155,6 +155,11 @@
 			<key>precedence</key>
 			<integer>2</integer>
 		</dict>
+	</dict>
+	<key>QSDefaults</key>
+	<dict>
+		<key>QSExternalIPSource</key>
+		<string>http://plain-text-ip.com/</string>
 	</dict>
 	<key>QSPlugIn</key>
 	<dict>
@@ -428,10 +433,5 @@
 			<string>Networking</string>
 		</dict>
 	</array>
-	<key>QSDefaults</key>
-	<dict>
-		<key>QSExternalIPSource</key>
-		<string>http://plain-text-ip.com/</string>
-	</dict>
 </dict>
 </plist>
